sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: identifier expected but integer literal found.
      if (L[j-1]>L[j]){
              ^AlgBubbleSort1:18: error: ']' expected but '}' found.
    }
    ^